--- a/project/project/MainPage.xaml
+++ b/project/project/MainPage.xaml
@@ -5,30 +5,24 @@
              x:Class="project.MainPage">
 
 
-    <Grid Margin="1,0,0,1">
-        <!--<Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>-->
+    <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="150"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="150"/>
         </Grid.RowDefinitions>
 
-        <StackLayout MinimumHeightRequest="150" MinimumWidthRequest="150" Grid.Row="0" BackgroundColor="LightGreen">
+        <StackLayout MinimumHeightRequest="150" MinimumWidthRequest="150" Grid.Row="0" BackgroundColor="LightBlue">
             <Image Source="Assets/main.jpg"  WidthRequest="150"  HeightRequest="150"/>
         </StackLayout>
-        <!--<ImageButton x:Name="Certificate" Clicked="Certificate_Clicked" ></ImageButton>-->
-        <!--<StackLayout Spacing="0" MinimumHeightRequest="50" MinimumWidthRequest="50" Grid.Row="1" BackgroundColor="Gray" >-->
 
-        <Button Text="Certificate" Margin="3,3,3,3" Grid.Row="1" Grid.Column="0" FontSize="8" WidthRequest="80" TextColor="Black" HorizontalOptions="Start" FontFamily="ovo" BackgroundColor="GreenYellow" x:Name="Certificate" Clicked="Certificate_Clicked"/>
-        <Button Text="Diploma" Margin="3,3,3,3" FontSize="8" WidthRequest="80" Grid.Row="1" Grid.Column="0" TextColor="Black" FontFamily="ovo" HorizontalOptions="Center" BackgroundColor="GreenYellow" x:Name="diploma" Clicked="diploma_Clicked"/>
-        <Button Text="Degree" Margin="3,3,3,3" FontSize="8" WidthRequest="80" Grid.Row="1" Grid.Column="0" TextColor="Black" FontFamily="ovo" HorizontalOptions="End" BackgroundColor="GreenYellow"  x:Name="degree" Clicked="degree_Clicked"/>
+        <Button Text="Certificate" Margin="3,3,3,3" Grid.Row="1" Grid.Column="0" FontSize="8"  WidthRequest="80" TextColor="Black" HorizontalOptions="Start" FontFamily="ovo" BackgroundColor="LightBlue" x:Name="Certificate" Clicked="Certificate_Clicked"/>
+        <Button Text="Diploma" Margin="3,3,3,3" FontSize="8" WidthRequest="80" Grid.Row="1" Grid.Column="0" TextColor="Black" FontFamily="ovo" HorizontalOptions="Center" BackgroundColor="LightBlue" x:Name="diploma" Clicked="diploma_Clicked"/>
+        <Button Text="Degree" Margin="3,3,3,3" FontSize="8" WidthRequest="80" Grid.Row="1" Grid.Column="0" TextColor="Black" FontFamily="ovo" HorizontalOptions="End" BackgroundColor="LightBlue"  x:Name="degree" Clicked="degree_Clicked"/>
         <!--</StackLayout>-->
         <StackLayout Spacing="0" MinimumHeightRequest="50" MinimumWidthRequest="50" Grid.Row="2" BackgroundColor="White">
 
-            <Label Text="Our Partnerships"  HorizontalTextAlignment="Center" FontSize="18"  />
+            <Label Text="Our Partnerships" TextColor="Black"  HorizontalTextAlignment="Center" FontSize="18"  />
 
 
 
@@ -37,7 +31,7 @@
 Embracing the value of whanaungatanga, connecting with others, we actively seek relationships with industry, other tertiary providers, community groups, iwi and hapu, and of course, with our students and staff.
 
 These partnerships take many forms, from partnering with local iwi to provide targeted education opportunities in remote parts of our region, to other institutions to delivery education pathways for higher learning, and in many parts of the world to bring international students to New Zealand."   
-                   FontSize="8" Margin="3,3,3,0"/>
+                   FontSize="8" Margin="3,3,3,0" />
         </StackLayout>
     </Grid>
 </ContentPage>
