--- a/project/project/dip74.xaml
+++ b/project/project/dip74.xaml
@@ -2,11 +2,41 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip74">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+    <Grid Margin="10,10,10,10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="70"/>
+
+        </Grid.RowDefinitions>
+        <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
+
+            <Label Text="Graduate Diploma of Web Design and Development(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+
         </StackLayout>
-    </ContentPage.Content>
+
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+
+        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="YellowGreen"/>
+        <Label Text="Comp.6210 Web Services and Design Methodology" Grid.Row="2" Grid.Column="1" BackgroundColor="YellowGreen" />
+        <Label Text="Comp.6212 Data Management" Grid.Row="3" Grid.Column="0" BackgroundColor="YellowGreen" />
+        <Label Text="Comp.7215 Advance Content Management System Development" Grid.Row="3" Grid.Column="1" BackgroundColor="YellowGreen"/>
+
+        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+
+        <Label Text="Comp 7213 Human Computer Interaction" Grid.Row="5" Grid.Column="0" BackgroundColor="YellowGreen"/>
+        <Label Text="Comp.7214 Client Server Web Development" Grid.Row="5" Grid.Column="1" BackgroundColor="YellowGreen" />
+        <Label Text="GENR.7101 Project" Grid.Row="6" Grid.Column="0" BackgroundColor="YellowGreen" />
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+    </Grid>
 </ContentPage>
