--- a/project/project/deglevel5.xaml
+++ b/project/project/deglevel5.xaml
@@ -20,19 +20,19 @@
 
         </Grid.RowDefinitions>
        
-        <Label Text="Semester1(Level 5)" Grid.Row="0" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1(Level 5)" Grid.Row="0" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 5209 Information Technology Operation" VerticalTextAlignment="Center" Grid.Row="1" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="1" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5203 Professional Practice " Grid.Row="2" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5204 Enterprise " Grid.Row="2" Grid.Column="1" BackgroundColor="YellowGreen"/>
+        <Label Text="Comp 5209 Information Technology Operation" VerticalTextAlignment="Center" Grid.Row="1" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="1" Grid.Column="1" BackgroundColor="LightBlue" />
+        <Label Text="Comp.5203 Professional Practice " Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue" />
+        <Label Text="Comp.5204 Enterprise " Grid.Row="2" Grid.Column="1" BackgroundColor="LightBlue"/>
 
-        <Label Text="Semester2 (Level5)"  Grid.Row="3" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester2 (Level5)"  Grid.Row="3" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-        <Button Text="Level 5 Elective " x:Name="deg51" Clicked="deg51_Clicked" Grid.Row="4" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Button Text="Level 5 Elective" x:Name="deg52" Clicked="deg52_Clicked" Grid.Row="4" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Button Text="Level 5 Elective" x:Name="deg53" Clicked="deg53_Clicked" Grid.Row="5" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Button Text="Level 5 Elective" x:Name="deg54" Clicked="deg54_Clicked" Grid.Row="5" Grid.Column="1" BackgroundColor="YellowGreen" />
+        <Button Text="Level 5 Elective " x:Name="deg51" Clicked="deg51_Clicked" Grid.Row="4" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Button Text="Level 5 Elective" x:Name="deg52" Clicked="deg52_Clicked" Grid.Row="4" Grid.Column="1" BackgroundColor="LightBlue" />
+        <Button Text="Level 5 Elective" x:Name="deg53" Clicked="deg53_Clicked" Grid.Row="5" Grid.Column="0" BackgroundColor="LightBlue" />
+        <Button Text="Level 5 Elective" x:Name="deg54" Clicked="deg54_Clicked" Grid.Row="5" Grid.Column="1" BackgroundColor="LightBlue" />
         <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="6" Grid.Column="0" Source="Assets/back.PNG"></ImageButton>
         <ImageButton x:Name="next" Clicked="Next_Clicked" Grid.Row="6" Grid.Column="1" Source="Assets/next.PNG"></ImageButton>
     </Grid>
