--- a/project/project/dip51.xaml
+++ b/project/project/dip51.xaml
@@ -8,36 +8,31 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
+
         <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
 
-            <Label Text="NZ Diploma in Web Development and design"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
-            
+            <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+
         </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 5201 Information Technology Operations" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="2" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5203 Professional Practice" Grid.Row="3" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5204 Enterprise" Grid.Row="3" Grid.Column="1" BackgroundColor="YellowGreen"/>
+        <Label Text="Comp 5201 Information Technology Operations" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="1" BackgroundColor="LightBlue" />
+        <Label Text="Comp.5203 Professional Practice" VerticalTextAlignment="Center" FontSize="11" Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
+        <Label Text="Comp.5204 Enterprise" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" FontSize="11" BackgroundColor="LightBlue"/>
 
-        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+        <Button Text="Semester2" x:Name="Dip512" Clicked="Dip512_Clicked_1" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="LightBlue"/>
 
-        <Label Text="Comp 5209 Interface Analysis and Design" Grid.Row="5" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.5210 Web Application Implimentation" Grid.Row="5" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5211 Application Testing and Maintainence" Grid.Row="6" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.5212 Programming" Grid.Row="7" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.5213 Special Topic" Grid.Row="7" Grid.Column="1" BackgroundColor="YellowGreen"/>
-        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="8" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
-        </Grid>
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="1" Grid.Row="5" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
+
+    </Grid>
 </ContentPage>
