--- a/project/project/dip61.xaml
+++ b/project/project/dip61.xaml
@@ -3,43 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip61">
     
-    <Grid Margin="10,10,10,10">
-        <Grid.ColumnDefinitions>
+        <Grid Margin="10,10,10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".1*" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
 
-        <Grid.RowDefinitions>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="70"/>
-        <RowDefinition Height="70"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="70"/>
-        <RowDefinition Height="70"/>
-        <RowDefinition Height="70"/>
-        <RowDefinition Height="100"/>
-    </Grid.RowDefinitions>
-    <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
+        </Grid.RowDefinitions>
 
-            <Label Text="NZ Diploma in Networking(level 6)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+            <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="Black" >
 
-    </StackLayout>
+                    <Label Text="NZ Diploma in Networking(level 6)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+            </StackLayout>
 
-        <Label Text="Comp 6201 Rounting and Switching" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.6203 Connecting Networks" Grid.Row="2" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.6204 Voice Networks" Grid.Row="3" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.6217 Hardware Technology " Grid.Row="4" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.6207 Special Topic " Grid.Row="4" Grid.Column="1" BackgroundColor="YellowGreen"/>
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="3"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Semester2"  Grid.Row="5" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+        <Label Text="Comp 6201 Rounting and Switching" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Label Text="Comp.6203 Connecting Networks" Grid.Row="2" Grid.Column="3" BackgroundColor="LightBlue" />
+        <Label Text="Comp.6204 Voice Networks" Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
+        <Label Text="Comp.6217 Hardware Technology " Grid.Row="4" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Label Text="OR" Grid.Row="4" Grid.Column="1" FontSize="11" BackgroundColor="White"  YAlign="Center"  TextColor="Blue"/>
+        <Label Text="Comp.6207 Special Topic " Grid.Row="4" Grid.Column="3" BackgroundColor="LightBlue"/>
 
-    <Label Text="Comp 6202 Scalling Networks" Grid.Row="6" Grid.Column="0" BackgroundColor="YellowGreen"/>
-    <Label Text="Comp.6205 Professional Practice" Grid.Row="6" Grid.Column="1" BackgroundColor="YellowGreen" />
-    <Label Text="Comp.6206 Network Security" Grid.Row="7" Grid.Column="0" BackgroundColor="YellowGreen" />
-    <Label Text="Comp.6208 Project1" Grid.Row="7" Grid.Column="1" BackgroundColor="YellowGreen"/>
-    <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="8" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <Button Text="Semester2" x:Name="Dip612" Clicked="Dip612_Clicked" Grid.ColumnSpan="2" Grid.Row="5" FontSize="11" WidthRequest="200"  BackgroundColor="LightBlue"/>
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="6" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="3" Grid.Row="6" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
+
     </Grid>
 </ContentPage>
