--- a/project/project/dip72.xaml
+++ b/project/project/dip72.xaml
@@ -2,41 +2,37 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip72">
-    <Grid Margin="10,10,10,10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+ <Grid Margin="10,10,10,10">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="20"/>
+        <RowDefinition Height="50"/>
+        <RowDefinition Height="50"/>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="50"/>
+    </Grid.RowDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
+    <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
 
-        </Grid.RowDefinitions>
-        <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
+        <Label Text="Graduate Diploma of Cyber Security(level 7)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-            <Label Text="Graduate Diploma of Cyber Security(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+    </StackLayout>
 
-        </StackLayout>
+    <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+    <Label Text="Comp 6201 Routing and Switching" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
+    <Label Text="Comp.6203 Connecting Network" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="1" BackgroundColor="LightBlue" />
+    <Label Text="Comp.6206 Network Security" VerticalTextAlignment="Center" FontSize="11" Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
+    <Label Text="Comp.7201 Large network Technologies" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" FontSize="11" BackgroundColor="LightBlue"/>
 
-        <Label Text="Comp 6201 Routing and Switching" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.6203 Connecting Network" Grid.Row="2" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.6206 Network Security" Grid.Row="3" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <Label Text="Comp.7201 Large network Technologies" Grid.Row="3" Grid.Column="1" BackgroundColor="YellowGreen"/>
+    <Button Text="Semester2" x:Name="Dip722" Clicked="Dip722_Clicked" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="LightBlue"/>
 
-        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="GreenYellow" HorizontalTextAlignment="Center"/>
+    <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+    <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="1" Grid.Row="5" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
 
-        <Label Text="Comp 7202 System Security " Grid.Row="5" Grid.Column="0" BackgroundColor="YellowGreen"/>
-        <Label Text="Comp.7203 Cyber Security" Grid.Row="5" Grid.Column="1" BackgroundColor="YellowGreen" />
-        <Label Text="GENR.7101 Project" Grid.Row="6" Grid.Column="0" BackgroundColor="YellowGreen" />
-        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
-    </Grid>
+</Grid>
 </ContentPage>
